src/test/ui/error-codes/E0077.stderr
error[E0077]: SIMD vector element type should be machine type
  --> $DIR/E0077.rs:4:1
   |
LL | struct Bad(String);
   | ^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0077`.
